--- a/redirect.html
+++ b/redirect.html
@@ -2,12 +2,8 @@
 <html>
 <head>
     <!-- ↓↓↓ 只需修改这里 ↓↓↓ -->
-    <meta http-equiv="refresh" content="0; url=https://www.bilibili.com/" />
+    <meta http-equiv="refresh" content="0; url=https://space.bilibili.com/3546902020754069" />
     <!-- ↑↑↑ 以后改这里 ↑↑↑ -->
-    <title>跳转中请稍候...</title>
+    <title>...</title>
 </head>
-<body>
-    <h1>🎬 视频即将上线</h1>
-    <p>如果浏览器未自动跳转，请<a href="https://www.bilibili.com/">点击这里</a></p>
-</body>
 </html>
