--- a/redirect.html
+++ b/redirect.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- ↓↓↓ 只需修改这里 ↓↓↓ -->
-    <meta http-equiv="refresh" content="0; url=https://space.bilibili.com/3546902020754069" />
+    <meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/000ZJM000/matevideo/refs/heads/main/V1_compressed.mp4" />
     <!-- ↑↑↑ 以后改这里 ↑↑↑ -->
     <title>...</title>
 </head>
