--- a/redirect.html
+++ b/redirect.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- ↓↓↓ 只需修改这里 ↓↓↓ -->
-    <meta http-equiv="refresh" content="0; url=https://rawcdn.githack.com/000ZJM000/matevideo/refs/heads/main/V1_compressed.mp4" />
+    <meta http-equiv="refresh" content="0; url=https://www.bilibili.com/video/BV1V7NQzhECw/?share_source=copy_web&vd_source=c9cfd935c18ea30c74705ea20402e5bc" />
     <!-- ↑↑↑ 以后改这里 ↑↑↑ -->
     <title>...</title>
 </head>
